[gd_scene load_steps=7 format=3 uid="uid://coxdctl7cyt6x"]

[ext_resource type="FontFile" uid="uid://c7r7x7h6jh0uq" path="res://assets/fonts/kenvector_future.ttf" id="1_mbcmm"]
[ext_resource type="Script" path="res://scripts/Menus/LeaderboardMenu.gd" id="1_r8kll"]

[sub_resource type="Gradient" id="Gradient_0p7yj"]
colors = PackedColorArray(0.489218, 0.577116, 0.814937, 1, 0.863987, 0.865142, 0.950427, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hj3hl"]
gradient = SubResource("Gradient_0p7yj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4rr3"]
bg_color = Color(0.513726, 0.596078, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3oyv"]
bg_color = Color(0.329412, 0.572549, 0.945098, 1)

[node name="LeaderboardMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8kll")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_hj3hl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="FirstLevelLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "Level 1"
horizontal_alignment = 1

[node name="FirstLevel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.894118, 0.321569, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "username  00:00:00"
horizontal_alignment = 1

[node name="SecondLevelLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "Level 2"
horizontal_alignment = 1

[node name="SecondLevel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.894118, 0.321569, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "username  00:00:00"
horizontal_alignment = 1

[node name="ThirdLevelLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "Level 3
"
horizontal_alignment = 1

[node name="ThirdLevel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.894118, 0.321569, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 32
text = "username  00:00:00"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mbcmm")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_m4rr3")
theme_override_styles/hover = SubResource("StyleBoxFlat_d3oyv")
text = "Exit"
